[workspace]
members = [
  "tonic",
  "tonic-build",
  "tonic-health",
  "tonic-types",
  "tonic-reflection",
  "tonic-web", # Non-published crates
  "examples",
  "codegen",
  "interop", # Tests
  "tests/disable_comments",
  "tests/included_service",
  "tests/same_name",
  "tests/service_named_service",
  "tests/wellknown",
  "tests/wellknown-compiled",
  "tests/extern_path/uuid",
  "tests/ambiguous_methods",
  "tests/extern_path/my_application",
  "tests/integration_tests",
  "tests/stream_conflict",
  "tests/root-crate-path",
  "tests/compression",
  "tests/web",
  "tests/service_named_result",
  "tests/use_arc_self",
  "tests/default_stubs",
  "tests/deprecated_methods",
  "tests/skip_debug",
]
resolver = "2"

[workspace.package]
rust-version = "1.75"

[profile.dev]
opt-level = 2

[workspace.lints.rust]
missing_debug_implementations = "warn"
missing_docs = "warn"
rust_2018_idioms = "warn"
unreachable_pub = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[patch.crates-io]
c-kzg = {path = "../c-kzg-4844"}
tokio = { git = "https://github.com/cristibctr/tokio-wasix", branch = "wasix-1.41.1", features = ["fs"] }
socket2 = { git = "https://github.com/cristibctr/socket2.git", branch = "v0.6.0" }
hostname = { path = "../hostname"}
libc = { git = "https://github.com/cristibctr/libc-0.2.169", branch = "wasix-0.2.169" }
metrics-process = { git = "https://github.com/cristibctr/rs-metrics-process", branch = "feat/add-wasm-support" }
rustls-platform-verifier = { version = "=0.5", optional = false, path = "../rustls-platform-verifier/rustls-platform-verifier" }
jsonrpsee = { git = "https://github.com/cristibctr/jsonrpsee", branch = "master" }
jsonrpsee-core = { git = "https://github.com/cristibctr/jsonrpsee", branch = "master" }
jsonrpsee-server = { git = "https://github.com/cristibctr/jsonrpsee", branch = "master" }
jsonrpsee-http-client = { git = "https://github.com/cristibctr/jsonrpsee", branch = "master" }
jsonrpsee-types = { git = "https://github.com/cristibctr/jsonrpsee", branch = "master" }
getrandom = { git = "https://github.com/cristibctr/getrandom", branch = "feat/add-wasm-support-0.3.1" }
procfs = { git = "https://github.com/cristibctr/procfs", branch = "feat/add-wasm-support" }
rustix = { git = "https://github.com/cristibctr/rustix", branch = "feat/add-wasm-support" }
crossterm = { git = "https://github.com/cristibctr/crossterm", branch = "feat/add-wasm-support" }
mio = { git = "https://github.com/cristibctr/mio", branch = "v1.0.1" }
parking_lot = { git = "https://github.com/cristibctr/parking_lot", branch = "master" }
reqwest = { git = "https://github.com/cristibctr/reqwest", branch = "master" }
hyper-util = { git = "https://github.com/cristibctr/hyper-util", branch = "master" }
discv5 = { git = "https://github.com/cristibctr/discv5", rev = "v0.8.1" }
interprocess = { git = "https://github.com/cristibctr/interprocess", branch = "main" }
hickory-resolver = { git = "https://github.com/cristibctr/hickory-dns", branch = "v0.25.0-alpha.5" }
futures-utils-wasm = { git = "https://github.com/cristibctr/futures-utils-wasm", branch = "main" }
rustls-native-certs = { git = "https://github.com/cristibctr/rustls-native-certs", branch = "main"}
